--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <style>
-            body {
-              font-family: Arial;
-              line-height: 1.5em;
-              max-width: 768px;
-              margin: 0px auto;
-              padding: 64px;
-            }
-            code {
-              border: 1px solid #d0d0d0;
-              background-color: #f0f0f0;
-              padding: 2px 4px;
-              border-radius: 3px;
-            }
-          </style>
-    </head>
+<html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>
-    Home
-</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Perfil</title>
+	<script src="https://kit.fontawesome.com/7c831017e8.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <div id="Em breve...">
-        <h1>Em breve...</h1>
-        <div id="Jeiel Miranda">
-            <h2>Jeiel Miranda</h2>
-        </div>
-    </div>
-    <iframe src="https://getalby.com/p/jetrom" style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="700px" width="600px" allowfullscreen></iframe>
+
+<body onload="Projetos()">
+	<header>
+		<div class="content">
+			<div class="container infors-perfil">
+				<i class="far fa-user"></i>
+				<h1>Olá, eu sou <span style="color:#ff9d01">Jeiel</span></h1>
+				<p>Formado em Bombeiro Civil, estudante de Segurança Digital (UNAMA - PA) e formações de cursos relacionados a Tecnologia.</p>
+				<div class="redes-sociais">
+				</div>
+			</div>
+			<div class="container contato">
+				<p>Baixe meu apk para Whatsapp:</p>
+				<div class="btns">
+					<a href="https://download848.mediafire.com/na6em7xmv9jg/lmbnba9tru86z15/com.UmClique_1.1.apk" download="PDF" type="application/pdf"><button>DOWNLOAD</button></a>
+				</div>
+			</div>
+		</div>
+		<div class="content container img">
+			<img class="foto-perfil" src="https://i.imgur.com/8cOOMXR_d.webp?maxwidth=640&shape=thumb&fidelity=medium" alt="Foto Perfil">
+		</div>
+	</header>
+	<footer>
+		<button id="clear" onclick="mudaTema()">Modo Claro</button>
+		<p> Desenvolvido por <b>Jeiel Miranda - Jeiel17@protonmail.com (Email)</b></p>
+	</footer>
 </body>
-</head>
+
 </html>
