--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="container">
     <div class="navbar">
-      <a class="btn btnDoe" href="https://getalby.com/p/jetrom" target="_blank">Doe</a>
+      <a class="btn btnDoe" href="https://picpay.me/Jeiel.18" target="_blank">Doe</a>
     </div>
     <div class="navbar navbar-menu">
       <label class="btn btnMenu btnMenuFigura active" for="chkFigura">Figura</label>
@@ -72,24 +72,22 @@
     </div>
 
     <footer>
+
+      <!-- Ajudando a hospedar por curto período -->
+      <a href="https://github.com/Jeiel17" target="_blank">
+        <img src="img/github-logo.svg" />
+        <span>Jeiel Miranda</span>
+      </a>
+
       <a href="https://www.instagram.com/joaoeymard/" target="_blank">
         <img src="img/instagram-logo.svg" />
-        <span>Feito por: @joaoeymard</span>
+        <span>Fork: @joaoeymard</span>
       </a>
       <a href="https://www.instagram.com/souocleison/" target="_blank">
         <img src="img/instagram-logo.svg" />
         <span>Desenhado por: @souocleison</span>
       </a>
 
-      <a href="https://github.com/joaoeymard/bolsonaro2turno" target="_blank">
-        <img src="img/github-logo.svg" />
-        <span>joaoeymard/bolsonaro2turno</span>
-      </a>
-<!-- Ajudando a hospedar por curto período -->
-      <a href="https://github.com/Jeiel17" target="_blank">
-        <img src="img/github-logo.svg" />
-        <span>@Jeiel17</span>
-      </a>
     </footer>
   </div>
 
