--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <div class="container">
     <div class="navbar">
-      <a class="btn btnDoe" href="https://picpay.me/Jeiel.18" target="_blank">Doe</a>
+      <a class="btn btnDoe" href="https://www.paypal.com/donate/?business=MAN8K9GNQWDPJ&no_recurring=1&currency_code=BRL" target="_blank">Doe</a>
     </div>
     <div class="navbar navbar-menu">
       <label class="btn btnMenu btnMenuFigura active" for="chkFigura">Figura</label>
