--- a/index.html
+++ b/index.html
@@ -87,7 +87,15 @@
         <img src="img/instagram-logo.svg" />
         <span>Desenhado por: @souocleison</span>
       </a>
-
+      
+      <form action="https://www.paypal.com/donate" method="post" target="_top">
+        <input type="hidden" name="business" value="MAN8K9GNQWDPJ" />
+        <input type="hidden" name="no_recurring" value="1" />
+        <input type="hidden" name="currency_code" value="BRL" />
+        <input type="image" src="https://www.paypalobjects.com/pt_BR/BR/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Faça doações com o botão do PayPal" />
+        <img alt="" border="0" src="https://www.paypal.com/pt_BR/i/scr/pixel.gif" width="1" height="1" />
+        </form>        
+      
     </footer>
   </div>
 
