--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--      _          _          _     __  __   _                              _         
+     | |   ___  (_)   ___  | |   |  \/  | (_)  _ __    __ _   _ __     __| |   __ _ 
+  _  | |  / _ \ | |  / _ \ | |   | |\/| | | | | '__|  / _` | | '_ \   / _` |  / _` |
+ | |_| | |  __/ | | |  __/ | |   | |  | | | | | |    | (_| | | | | | | (_| | | (_| |
+  \___/   \___| |_|  \___| |_|   |_|  |_| |_| |_|     \__,_| |_| |_|  \__,_|  \__,_|
+                                                                                    -->
 <html lang="pt-br">
   <script async src="/va/script.js"></script>
 <head>
@@ -6,27 +12,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bolsonaro 2º Turno</title>
+  <title>Brasil</title>
 
-  <meta name="title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
+  <meta name="title" content="Sou Brasileiro com muito orgulho!" />
   <meta name="description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
-  <meta property="og:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
-  <meta property="og:description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-  <meta property="og:image" itemprop="image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://joaoeymard.github.io/bolsonaro2turno/" />
-  <meta property="twitter:title" content="Bolsonaro 2º Turno — Apoio ao Jair Bolsonaro com seu nome" />
-  <meta property="twitter:description"
-    content="Gere seu flyer personalizado com seu nome de apoio ao Jair Bolsonaro para o segundo turno das eleições brasileira." />
-  <meta property="twitter:image" content="https://joaoeymard.github.io/bolsonaro2turno/metadata.png" />
+    content="Gere um perfil com seu nome sobre Brasil" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -77,16 +67,17 @@
       <!-- Ajudando a hospedar por curto período -->
       <a href="https://github.com/Jeiel17" target="_blank">
         <img src="img/github-logo.svg" />
-        <span>Jeiel Miranda</span>
+        <span>Jeiel17</span>
+      </a>
+
+      <a href="https://github.com/Jeiel17" target="_blank">
+        <img src="img/github-logo.svg" />
+        <span>Desenhado por: Jeiel Miranda</span>
       </a>
 
       <a href="https://www.instagram.com/joaoeymard/" target="_blank">
         <img src="img/instagram-logo.svg" />
         <span>Fork: @joaoeymard</span>
-      </a>
-      <a href="https://www.instagram.com/souocleison/" target="_blank">
-        <img src="img/instagram-logo.svg" />
-        <span>Desenhado por: @souocleison</span>
       </a>
       
       <form action="https://www.paypal.com/donate" method="post" target="_top">
