--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brasil</title>
 
-  <meta name="title" content="Sou Brasileiro com muito orgulho!" />
+  <meta name="title" content="Creio em Jesus!" />
   <meta name="description"
-    content="Gere um perfil com seu nome sobre Brasil" />
+    content="Gere um perfil com seu nome" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
