--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <img src="img/instagram-logo.svg" />
         <span>Fork: @joaoeymard</span>
       </a>
-      
+      <p>Chave PIX: a93ea08c-4239-44d8-8ffa-6a5687b1ed1c</p>
       <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="business" value="MAN8K9GNQWDPJ" />
         <input type="hidden" name="no_recurring" value="1" />
