--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <html lang="pt-br">
   <script async src="/va/script.js"></script>
 <head>
+  <meta name='dmca-site-verification' content='U2JMNm5LZkFzQkc1Y3ZIUWdGUm5KQT090' />
   <meta name="lightning" content="jetrom@getalby.com" />
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
