--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <input type="image" src="https://www.paypalobjects.com/pt_BR/BR/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Faça doações com o botão do PayPal" />
         <img alt="" border="0" src="https://www.paypal.com/pt_BR/i/scr/pixel.gif" width="1" height="1" />
         </form>        
-      
+        <a href="//www.dmca.com/Protection/Status.aspx?ID=a5ffdbfc-e490-43be-8258-e18fb2ff4dea" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_17_120.png?ID=a5ffdbfc-e490-43be-8258-e18fb2ff4dea"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
     </footer>
   </div>
 
