--- a/index.html
+++ b/index.html
@@ -86,16 +86,25 @@
         <img src="img/instagram-logo.svg" />
         <span>Fork: @joaoeymard</span>
       </a>
-      <p>Chave PIX: a93ea08c-4239-44d8-8ffa-6a5687b1ed1c</p>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<header class="w3-container w3-yellow">
+  <p>Chave PIX: a93ea08c-4239-44d8-8ffa-6a5687b1ed1c</p>
+</header>
+
       <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="business" value="MAN8K9GNQWDPJ" />
         <input type="hidden" name="no_recurring" value="1" />
         <input type="hidden" name="currency_code" value="BRL" />
         <input type="image" src="https://www.paypalobjects.com/pt_BR/BR/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Faça doações com o botão do PayPal" />
         <img alt="" border="0" src="https://www.paypal.com/pt_BR/i/scr/pixel.gif" width="1" height="1" />
-        </form>        
+        </form>      
+
         <a href="https://www.dmca.com/Protection/Status.aspx?ID=a5ffdbfc-e490-43be-8258-e18fb2ff4dea&refurl=https://jetronix.tk/" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca_protected_17_120.png?ID=a5ffdbfc-e490-43be-8258-e18fb2ff4dea"  alt="DMCA.com Protection Status" /></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script>
-    </footer>
+
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br />Este obra de <a xmlns:cc="http://creativecommons.org/ns#" href="https://jetronix.tk" property="cc:attributionName" rel="cc:attributionURL">Jeiel Lima Miranda</a> está licenciado com uma Licença <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Atribuição-NãoComercial 4.0 Internacional</a>.
+      
+      </footer>
   </div>
 
   <script src="./scripts/script.js?v=3"></script>
