--- a/cv-jeiel.html
+++ b/cv-jeiel.html
@@ -14,6 +14,9 @@
                                                
 -->
 <html lang="pt-br">
+<script>
+  alert("\n \n Dados contidos no currículo são verídicas!");
+</script>
     <title>CV de Jeiel</title>
     <body>
         <center>
