--- a/dmca-validation.html
+++ b/dmca-validation.html
@@ -1,1 +1,4 @@
+<script>
+    alert("\n \n Espero que não esteja usando ferramenta de busca de diretórios como dirb!");
+  </script>
 U2JMNm5LZkFzQkc1Y3ZIUWdGUm5KQT090
