--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
                                                                                                                                              
 -->
 <html lang="pt-br">
+<script>
+  alert("Tenho outras urls: \n \n - https://jetronix.tk/bot.html \n - https://jetronix.tk/bible.html \n \n Nota: Para acessar basta adicionar o termo final da url. \n Exemplo: /bible.html");
+</script>
   <script async src="/va/script.js"></script>
 <head>
   <meta name='dmca-site-verification' content='U2JMNm5LZkFzQkc1Y3ZIUWdGUm5KQT090' />
