--- a/cv-jeiel.html
+++ b/cv-jeiel.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="lightning" content="jetrom@getalby.com" />
 <!-- 
   
     ___  _______   ___  _______   ___          
@@ -15,7 +16,7 @@
 -->
 <html lang="pt-br">
 <script>
-  alert("\n \n Dados contidos no currículo são verídicas!");
+  alert("\n Estás de acordo com a lei LGPD no Brasil?!");
 </script>
     <title>CV de Jeiel</title>
     <body>
