--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
                                                                                                                                              
 -->
 <html lang="pt-br">
-<script>
-  alert("Tenho outras urls: \n \n - https://jetronix.tk/bot.html \n - https://jetronix.tk/bible.html \n \n Nota: Para acessar basta adicionar o termo final da url. \n Exemplo: /bible.html");
-</script>
   <script async src="/va/script.js"></script>
 <head>
   <meta name='dmca-site-verification' content='U2JMNm5LZkFzQkc1Y3ZIUWdGUm5KQT090' />
@@ -25,8 +22,7 @@
   <title>Brasil</title>
 
   <meta name="title" content="Creio em Jesus!" />
-  <meta name="description"
-    content="Gere um perfil com seu nome" />
+  <meta name="description" content="Gere um perfil com seu nome" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,7 +49,7 @@
 
   <div class="container">
     <div class="navbar">
-      <a class="btn btnLicense" href="https://jetronix.tk/LICENSE" target="_blank">License</a>
+      <a class="btn btnLicense" href="https://jetronix.tk/LICENSE.txt" target="_blank">License</a>
     </div>
     <div class="navbar navbar-menu">
       <label class="btn btnMenu btnMenuFigura active" for="chkFigura">Figura</label>
