--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><!--Templante de @Abhay#0593 (Discord)-->
+<meta name="lightning" content="jetrom@getalby.com" />
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
