--- a/tabela.html
+++ b/tabela.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="./style_tabela.css">
 </head>
 <body>
-<!--Elemento baseado em https://codepen.io-->
+<!--Tabela de Química -->
 <div class="wrapper">
   <input class="category-toggle" type="radio" id="alkali-metals" name="categories"/>
   <input class="category-cancel" id="cancel" type="radio" name="categories"/>
