--- a/tabela.html
+++ b/tabela.html
@@ -15,7 +15,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="lightning" content="jetrom@getalby.com" />
-  <title>CodePen - Tabela Periódica dos Elementos</title>
+  <title>Tabela Periódica dos Elementos</title>
   <link rel="stylesheet" href="./style_tabela.css">
 </head>
 <body>
