--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
       </div>
       <div class="toast-body">
-        Welcome a nova página!
+    >> Recarregue-a se for primeiro acesso <<
       </div>
     </div>
   </div>
