--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                                                                                                                                              
 -->
 <html lang="pt-br">
+  <meta name="lightning" content="jetrom@getalby.com" />
 <!--CSS-->
 <style>
     * {
