--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </div>
       <div>
         <h1>Qúimica</h1>
-        <p><b>Tenha tabela periódica em mãos!</b></p>
+        <p><b>Tenha <a href="https://jetronix.tk/tabela.html">tabela periódica</a> em mãos!</b></p>
         <p>Não apenas tabela periódica como outros materiais que possa ser últil para seu estudo. </p>
         <center>
             <div>
