--- a/flix.html
+++ b/flix.html
@@ -11,7 +11,10 @@
                                                
                                                                                                                                              
 -->
+<head>
 <meta name="lightning" content="jetrom@getalby.com" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
 <script>
 alert("\n Contato: jetronix.tk.vpuau@simplelogin.com ");
 </script>
