--- a/flix.html
+++ b/flix.html
@@ -13,7 +13,7 @@
 -->
 <head>
 <meta name="lightning" content="jetrom@getalby.com" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=auto"/>
 </head>
 <script>
 alert("\n Contato: jetronix.tk.vpuau@simplelogin.com ");
