--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
       </div>
       <div class="toast-body">
-    >> Recarregue-a se for primeiro acesso <<
+    >> Recarregue-a página primeiro <<
       </div>
     </div>
   </div>
